// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component builds form for multiple guests 1`] = `
<div
  className="form"
>
  <div
    className="header"
  >
    Please reply by 30th September 2020 to let us know if you can make it
  </div>
  <div>
    <div
      className="Jack"
    >
      <form
        className=""
        onSubmit={[Function]}
      >
        <input
          className="form-control"
          name="guestID"
          type="hidden"
          value={1}
        />
        <div
          className="form-row"
        >
          <div
            className="col"
          >
            <input
              className="form-control"
              defaultValue="Jack"
              name="firstName"
            />
          </div>
          <br />
          <div
            className="col"
          >
            <input
              className="form-control"
              defaultValue="Harper"
              name="lastName"
            />
          </div>
        </div>
        <br />
        <div
          className="form-row"
        >
          <div
            className="col"
          >
            <input
              className="form-control"
              name="email"
              placeholder="Enter email"
              type="email"
            />
          </div>
        </div>
        <br />
        <div
          className="align-items-center form-row"
        >
          <div
            className="col"
          >
            <div
              className="form-check"
            >
              <input
                className="form-check-input"
                disabled={false}
                name="isGoing"
                type="checkbox"
              />
              <label
                className="form-check-label"
                title=""
              >
                Attending?
              </label>
            </div>
          </div>
          <br />
          <div
            className="col"
          >
            <button
              className="rsvp-button btn btn-primary"
              disabled={false}
              id={1}
              type="submit"
            >
              Submit
            </button>
          </div>
        </div>
        <br />
      </form>
    </div>
    <div
      className="Jill"
    >
      <form
        className=""
        onSubmit={[Function]}
      >
        <input
          className="form-control"
          name="guestID"
          type="hidden"
          value={2}
        />
        <div
          className="form-row"
        >
          <div
            className="col"
          >
            <input
              className="form-control"
              defaultValue="Jill"
              name="firstName"
            />
          </div>
          <br />
          <div
            className="col"
          >
            <input
              className="form-control"
              defaultValue="Harper"
              name="lastName"
            />
          </div>
        </div>
        <br />
        <div
          className="form-row"
        >
          <div
            className="col"
          >
            <input
              className="form-control"
              name="email"
              placeholder="Enter email"
              type="email"
            />
          </div>
        </div>
        <br />
        <div
          className="align-items-center form-row"
        >
          <div
            className="col"
          >
            <div
              className="form-check"
            >
              <input
                className="form-check-input"
                disabled={false}
                name="isGoing"
                type="checkbox"
              />
              <label
                className="form-check-label"
                title=""
              >
                Attending?
              </label>
            </div>
          </div>
          <br />
          <div
            className="col"
          >
            <button
              className="rsvp-button btn btn-primary"
              disabled={false}
              id={2}
              type="submit"
            >
              Submit
            </button>
          </div>
        </div>
        <br />
      </form>
    </div>
  </div>
</div>
`;

exports[`Component builds form for one guest 1`] = `
<div
  className="form"
>
  <div
    className="header"
  >
    Please reply by 30th September 2020 to let us know if you can make it
  </div>
  <div>
    <div
      className="Jack"
    >
      <form
        className=""
        onSubmit={[Function]}
      >
        <input
          className="form-control"
          name="guestID"
          type="hidden"
          value={1}
        />
        <div
          className="form-row"
        >
          <div
            className="col"
          >
            <input
              className="form-control"
              defaultValue="Jack"
              name="firstName"
            />
          </div>
          <br />
          <div
            className="col"
          >
            <input
              className="form-control"
              defaultValue="Harper"
              name="lastName"
            />
          </div>
        </div>
        <br />
        <div
          className="form-row"
        >
          <div
            className="col"
          >
            <input
              className="form-control"
              name="email"
              placeholder="Enter email"
              type="email"
            />
          </div>
        </div>
        <br />
        <div
          className="align-items-center form-row"
        >
          <div
            className="col"
          >
            <div
              className="form-check"
            >
              <input
                className="form-check-input"
                disabled={false}
                name="isGoing"
                type="checkbox"
              />
              <label
                className="form-check-label"
                title=""
              >
                Attending?
              </label>
            </div>
          </div>
          <br />
          <div
            className="col"
          >
            <button
              className="rsvp-button btn btn-primary"
              disabled={false}
              id={1}
              type="submit"
            >
              Submit
            </button>
          </div>
        </div>
        <br />
      </form>
    </div>
  </div>
</div>
`;
